# open-stack-AI

./: .gitignore  Makefile  README.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/faraday/: enterprise.go  main.go
docs/: ARCHITECTURE.md  CONFIG.md  LICENSING.md  REPO-STRUCTURE.md  ROADMAP.md
enterprise/: LICENSE
enterprise/teamobs/: teamobs.go
examples/: codegen.yaml  minimal.yaml
internal/api/: client.go
internal/bundle/: bundle.go  bundle_test.go
internal/cli/: bundle.go  commands.go  enterprise.go  root.go
internal/config/: config.go  config_test.go  defaults.go  load.go
internal/core/: engine.go
internal/daemon/: daemon.go
internal/eval/: dataset.go  passk_test.go  runner.go
internal/eval/datasets/: humanevalplus-mini.json
internal/evidence/: evidence.go  evidence_test.go  verify.go
internal/extension/: extension.go
internal/inference/: backend.go  handler.go  router.go  router_test.go  types.go
internal/license/: license.go  license_test.go
internal/mcp/: broker.go  builtins.go
internal/provision/: provision.go
internal/runtime/: agent.go  agent_test.go
internal/runtime/pool/: pool.go
internal/runtime/sandbox/: factory.go  (+6 more)
internal/store/: store.go  store_test.go
internal/telemetry/: telemetry.go
internal/version/: version.go
openspec/: config.yaml
pyservices/: README.md
pyservices/agent/: pyproject.toml
pyservices/common/: pyproject.toml
pyservices/eval/: pyproject.toml
pyservices/inference/: pyproject.toml
pyservices/inference/faraday_inference/: __init__.py  server.py
test/e2e/: e2e_test.go
(+25 files in other folders)
